Bug 275485 - kdevelop crashes when i try to revert my project to master branch
Summary: kdevelop crashes when i try to revert my project to master branch
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.60
Platform: Compiled Sources Linux
: VHI crash
Target Milestone: 4.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-12 20:36 UTC by Giorgos Tsiapaliokas
Modified: 2011-06-20 00:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (21.07 KB, text/plain)
2011-06-19 12:44 UTC, Valentin Rusu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Giorgos Tsiapaliokas 2011-06-12 20:36:09 UTC
Application: kdevelop (4.2.60)
KDE Platform Version: 4.6.80 (4.7 Beta1) (Compiled from sources)
Qt Version: 4.7.1
Operating System: Linux 2.6.37.6-0.5-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
Hello,

i am using kdevelop from master,it is being build with kdesrc-build script.
My sources are being build with the DebugFull mode.
The crash is reproducable every time.

If you need more info please don't hazitate to ask.:)

- What I was doing when the application crashed:

1)Right mouse button on a project
2)git
3)revert

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f76bbcff760 (LWP 2885))]

Thread 10 (Thread 0x7f76a2b37700 (LWP 3600)):
#0  0x00007f76b6e006f9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76b70af8a1 in QWaitConditionPrivate::wait (this=0x1951140, time=1000) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:86
#2  0x00007f76b70af665 in QWaitCondition::wait (this=0x193dd28, mutex=0x193dd30, time=1000) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:160
#3  0x00007f76b331aa34 in KDevelop::DUChainPrivate::CleanupThread::run (this=0x193dd10) at /home/kde-devel/kdesrc/kdevplatform/language/duchain/duchain.cpp:286
#4  0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x193dd10) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#5  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#6  0x00007f76b519067d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f7699864700 (LWP 3807)):
#0  0x00007f76b6dff67e in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007f76af668657 in g_main_context_acquire () from /lib64/libglib-2.0.so.0
#2  0x00007f76af669f25 in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007f76af66a650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007f76b7204570 in QEventDispatcherGlib::processEvents (this=0x256e190, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:417
#5  0x00007f76b71c8fee in QEventLoop::processEvents (this=0x7f7699863da0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#6  0x00007f76b71c9142 in QEventLoop::exec (this=0x7f7699863da0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#7  0x00007f76b70abbe2 in QThread::exec (this=0x2568b70) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread.cpp:490
#8  0x00007f76b3441897 in KDevelop::CompletionWorkerThread::run (this=0x2568b70) at /home/kde-devel/kdesrc/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#9  0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x2568b70) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#10 0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#11 0x00007f76b519067d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f769a065700 (LWP 3808)):
#0  0x00007f76b5187503 in poll () from /lib64/libc.so.6
#1  0x00007f76af66a114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f76af66a650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f76b7204570 in QEventDispatcherGlib::processEvents (this=0x256fbc0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:417
#4  0x00007f76b71c8fee in QEventLoop::processEvents (this=0x7f769a064da0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007f76b71c9142 in QEventLoop::exec (this=0x7f769a064da0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#6  0x00007f76b70abbe2 in QThread::exec (this=0x2564cd0) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread.cpp:490
#7  0x00007f76b3441897 in KDevelop::CompletionWorkerThread::run (this=0x2564cd0) at /home/kde-devel/kdesrc/kdevplatform/language/codecompletion/codecompletionmodel.cpp:84
#8  0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x2564cd0) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#9  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f76b519067d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f7691ef9700 (LWP 3852)):
#0  0x00007f76b6e0038c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76b40abbed in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7f76b4436580) at /home/kde-devel/kdesrc/qt-copy/src/3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007f76b40ab22c in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f76b4436580) at /home/kde-devel/kdesrc/qt-copy/src/3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f76b519067d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f7690ea4700 (LWP 3896)):
#0  0x00007f76b5187503 in poll () from /lib64/libc.so.6
#1  0x00007f76af66a114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f76af66a650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f76b7204570 in QEventDispatcherGlib::processEvents (this=0x3d5c3a0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:417
#4  0x00007f76b71c8fee in QEventLoop::processEvents (this=0x7f7690ea3d90, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007f76b71c9142 in QEventLoop::exec (this=0x7f7690ea3d90, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#6  0x00007f76b70abbe2 in QThread::exec (this=0x3d5bd00) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread.cpp:490
#7  0x00007f76b71a7df4 in QInotifyFileSystemWatcherEngine::run (this=0x3d5bd00) at /home/kde-devel/kdesrc/qt-copy/src/corelib/io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x3d5bd00) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#9  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f76b519067d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f768fccb700 (LWP 3963)):
#0  0x00007f76b6e0038c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76ae279b57 in WTF::TCMalloc_PageHeap::scavengerThread() () from /home/kde-devel/kdesrc/build/qt-copy/lib/libQtWebKit.so.4
#2  0x00007f76ae27912c in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /home/kde-devel/kdesrc/build/qt-copy/lib/libQtWebKit.so.4
#3  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#4  0x00007f76b519067d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f768e03f700 (LWP 3970)):
#0  0x00007f76b6e006f9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76b70af8a1 in QWaitConditionPrivate::wait (this=0x41280e0, time=30000) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:86
#2  0x00007f76b70af665 in QWaitCondition::wait (this=0x4123ac8, mutex=0x4123ac0, time=30000) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:160
#3  0x00007f76b709fa8d in QThreadPoolThread::run (this=0x4120980) at /home/kde-devel/kdesrc/qt-copy/src/corelib/concurrent/qthreadpool.cpp:140
#4  0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x4120980) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#5  0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#6  0x00007f76b519067d in clone () from /lib64/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f768d5f8700 (LWP 4096)):
#0  0x00007f76b6e0038c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76b70af8bd in QWaitConditionPrivate::wait (this=0xa228f0, time=18446744073709551615) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:88
#2  0x00007f76b70af665 in QWaitCondition::wait (this=0xa22418, mutex=0x90d960, time=18446744073709551615) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:160
#3  0x00007f76b9fd6856 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xa223f0, th=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f76b9fdab3b in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8d8340, th=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:80
#5  0x00007f76b9fd67d4 in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0xa223f0, th=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:356
#6  0x00007f76b9fdaadf in ThreadWeaver::WorkingHardState::applyForWork (this=0x8d8340, th=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#7  0x00007f76b9fd6797 in ThreadWeaver::WeaverImpl::applyForWork (this=0xa223f0, th=0x448a420, previous=0x4477be0) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:351
#8  0x00007f76b9fd85ba in ThreadWeaver::ThreadRunHelper::run (this=0x7f768d5f7df0, parent=0xa223f0, th=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/Thread.cpp:87
#9  0x00007f76b9fd887f in ThreadWeaver::Thread::run (this=0x448a420) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/Thread.cpp:142
#10 0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x448a420) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#11 0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#12 0x00007f76b519067d in clone () from /lib64/libc.so.6
#13 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f768cdf7700 (LWP 4097)):
#0  0x00007f76b6e0038c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f76b70af8bd in QWaitConditionPrivate::wait (this=0xa228f0, time=18446744073709551615) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:88
#2  0x00007f76b70af665 in QWaitCondition::wait (this=0xa22418, mutex=0x90d960, time=18446744073709551615) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qwaitcondition_unix.cpp:160
#3  0x00007f76b9fd6856 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xa223f0, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f76b9fdab3b in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x8d8340, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:80
#5  0x00007f76b9fd67d4 in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0xa223f0, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:356
#6  0x00007f76b9fdaadf in ThreadWeaver::WorkingHardState::applyForWork (this=0x8d8340, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#7  0x00007f76b9fd6797 in ThreadWeaver::WeaverImpl::applyForWork (this=0xa223f0, th=0x6c6200, previous=0x0) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:351
#8  0x00007f76b9fdab09 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8d8340, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#9  0x00007f76b9fd6797 in ThreadWeaver::WeaverImpl::applyForWork (this=0xa223f0, th=0x6c6200, previous=0x4e59ca0) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:351
#10 0x00007f76b9fd85ba in ThreadWeaver::ThreadRunHelper::run (this=0x7f768cdf6df0, parent=0xa223f0, th=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/Thread.cpp:87
#11 0x00007f76b9fd887f in ThreadWeaver::Thread::run (this=0x6c6200) at /home/kde-devel/kdesrc/kdelibs/threadweaver/Weaver/Thread.cpp:142
#12 0x00007f76b70ae3cc in QThreadPrivate::start (arg=0x6c6200) at /home/kde-devel/kdesrc/qt-copy/src/corelib/thread/qthread_unix.cpp:285
#13 0x00007f76b6dfba3f in start_thread () from /lib64/libpthread.so.0
#14 0x00007f76b519067d in clone () from /lib64/libc.so.6
#15 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f76bbcff760 (LWP 2885)):
[KCrash Handler]
#6  0x00007f76b3760598 in KDevelop::VcsPluginHelper::delayedModificationWarningOn (this=0x230a150) at /home/kde-devel/kdesrc/kdevplatform/vcs/vcspluginhelper.cpp:273
#7  0x00007f76b376209c in KDevelop::VcsPluginHelper::qt_metacall (this=0x230a150, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7fff938b6b90) at /home/kde-devel/kdesrc/build/kdevplatform/vcs/vcspluginhelper.moc:105
#8  0x00007f76b71d35ff in QMetaObject::metacall (object=0x230a150, cl=QMetaObject::InvokeMetaMethod, idx=17, argv=0x7fff938b6b90) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qmetaobject.cpp:237
#9  0x00007f76b71e8455 in QMetaObject::activate (sender=0x4fc93b0, m=0x7f76b7556bc0, local_signal_index=0, argv=0x0) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qobject.cpp:3280
#10 0x00007f76b7247ee9 in QTimer::timeout (this=0x4fc93b0) at .moc/debug-shared/moc_qtimer.cpp:134
#11 0x00007f76b71f1453 in QTimer::timerEvent (this=0x4fc93b0, e=0x7fff938b7590) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qtimer.cpp:271
#12 0x00007f76b71e3c81 in QObject::event (this=0x4fc93b0, e=0x7fff938b7590) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qobject.cpp:1183
#13 0x00007f76b605a21a in QApplicationPrivate::notify_helper (this=0x651120, receiver=0x4fc93b0, e=0x7fff938b7590) at /home/kde-devel/kdesrc/qt-copy/src/gui/kernel/qapplication.cpp:4445
#14 0x00007f76b605783e in QApplication::notify (this=0x7fff938b7c70, receiver=0x4fc93b0, e=0x7fff938b7590) at /home/kde-devel/kdesrc/qt-copy/src/gui/kernel/qapplication.cpp:3845
#15 0x00007f76b7a86961 in KApplication::notify (this=0x7fff938b7c70, receiver=0x4fc93b0, event=0x7fff938b7590) at /home/kde-devel/kdesrc/kdelibs/kdeui/kernel/kapplication.cpp:311
#16 0x00007f76b71cb48b in QCoreApplication::notifyInternal (this=0x7fff938b7c70, receiver=0x4fc93b0, event=0x7fff938b7590) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qcoreapplication.cpp:732
#17 0x00007f76b98cc1b7 in QCoreApplication::sendEvent (receiver=0x4fc93b0, event=0x7fff938b7590) at ../../../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:215
#18 0x00007f76b720781f in QTimerInfoList::activateTimers (this=0x64f270) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_unix.cpp:603
#19 0x00007f76b7203aa6 in timerSourceDispatch (source=0x64f210) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:184
#20 0x00007f76af669bd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#21 0x00007f76af66a3b0 in ?? () from /lib64/libglib-2.0.so.0
#22 0x00007f76af66a650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#23 0x00007f76b720454d in QEventDispatcherGlib::processEvents (this=0x620bd0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:415
#24 0x00007f76b613263a in QGuiEventDispatcherGlib::processEvents (this=0x620bd0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007f76b71c8fee in QEventLoop::processEvents (this=0x7fff938b78e0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#26 0x00007f76b71c9142 in QEventLoop::exec (this=0x7fff938b78e0, flags=...) at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qeventloop.cpp:201
#27 0x00007f76b71cbb7e in QCoreApplication::exec () at /home/kde-devel/kdesrc/qt-copy/src/corelib/kernel/qcoreapplication.cpp:1009
#28 0x00007f76b60573b6 in QApplication::exec () at /home/kde-devel/kdesrc/qt-copy/src/gui/kernel/qapplication.cpp:3719
#29 0x000000000040b8bc in main (argc=1, argv=0x7fff938b9a88) at /home/kde-devel/kdesrc/kdevelop/app/main.cpp:474

Reported using DrKonqi
Comment 1 Milian Wolff 2011-06-17 23:25:02 UTC
ouh-oh - Aleix, please take a look at this!
Comment 2 Valentin Rusu 2011-06-19 12:44:00 UTC
Created attachment 61140 [details]
New crash information added by DrKonqi

kdevelop (4.2.60) on KDE Platform 4.6.80 (4.7 Beta1) using Qt 4.7.3

- What I was doing when the application crashed:

I was git-reverting a file when crash occured

-- Backtrace (Reduced):
#6  0x00007f5181359588 in KDevelop::VcsPluginHelper::delayedModificationWarningOn (this=0x16d8df0) at /vrac2/kdesrc/4/trunk/extragear/kdevelop/kdevplatform/vcs/vcspluginhelper.cpp:273
#7  0x00007f518135b08c in KDevelop::VcsPluginHelper::qt_metacall (this=0x16d8df0, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7fffd59787f0) at /vrac2/kdesrc/4/build/extragear/kdevelop/kdevplatform/vcs/vcspluginhelper.moc:105
[...]
#9  0x00007f5184b7f0a9 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#10 0x00007f5183d16144 in QApplicationPrivate::notify_helper (this=0x64aa20, receiver=0x58c7df0, e=0x7fffd5978fd0) at kernel/qapplication.cpp:4462
#11 0x00007f5183d1e6fa in QApplication::notify (this=<value optimized out>, receiver=0x58c7df0, e=0x7fffd5978fd0) at kernel/qapplication.cpp:4341
Comment 3 Aleix Pol 2011-06-20 00:09:52 UTC
Git commit 4b25743ea8c7356b3d85e2910d613784ae67da38 by Aleix Pol.
Committed on 20/06/2011 at 00:07.
Pushed by apol into branch 'master'.

Oops! Don't reload if the file is not loaded...

BUG: 275485

M  +2    -1    vcs/vcspluginhelper.cpp     

http://commits.kde.org/kdevplatform/4b25743ea8c7356b3d85e2910d613784ae67da38