Oops! Don't reload if the file is not loaded...

BUG: 275485